RIP-380 Roster photos: fix cutoff in Firefox print view

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -101,6 +101,7 @@ html, body {
   html,
   body {
     height: fit-content;
+    overflow: visible;
     *.display-none-when-print {
       display: none;
     }
